syntax = "proto3";
package pricechain.rd_net.registry;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "registry/params.proto";
import "registry/registry.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/PriceChain/rd_net/x/registry/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/PriceChain/rd_net/registry/params";
  }
  // Queries a Registry by id.
	rpc Registry(QueryGetRegistryRequest) returns (QueryGetRegistryResponse) {
		option (google.api.http).get = "/PriceChain/rd_net/registry/registry/{id}";
	}

	// Queries a list of Registry items.
	rpc RegistryAll(QueryAllRegistryRequest) returns (QueryAllRegistryResponse) {
		option (google.api.http).get = "/PriceChain/rd_net/registry/registry";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetRegistryRequest {
	uint64 id = 1;
}

message QueryGetRegistryResponse {
	Registry Registry = 1 [(gogoproto.nullable) = false];
}

message QueryAllRegistryRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllRegistryResponse {
	repeated Registry Registry = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
