syntax = "proto3";
package pricechain.rd_net.registry;

option go_package = "github.com/PriceChain/cprc/x/registry/types";

message RegistryMember {
  uint64 id = 1;
  string registryId = 2; 
  string stakedAmount = 3; 
  string address = 4; 
  string status = 5; 
  string memberSince = 6; 
  string memo = 7; 
  string reserved = 8; 
  
}
